Fix bug on submenu by setting z-index value to 1

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -45,7 +45,8 @@ body {
 	position: absolute;
 	margin: 0;
 	padding: 0;
-	border: 0;	
+	border: 0;
+	z-index: 1;
 }
 
 #menu li:hover > .submenu {
